--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
 
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
 }
 
 .btn-white {
